Add ResponseCaching and Rate Limiting

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,21 @@
     "SecretKey": "",
     "Issuer": "",
     "Audience": ""
+  },
+
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": false, // Separate endpoints
+    "StackBlockerRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "HttpStatusCode": 429, // Too many Requests
+    "IpWhitelist": [ "127.0.0.1" ],
+    "EndpointWhitelist": [ /* "Get/api/users" */ ],
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "5s",
+        "Limit": 2
+      }
+    ]
   }
 }
